# crouton

./: .gitignore  Cargo.toml  LICENSE  build.rs
crouton/: Cargo.toml
crouton-protos/: Cargo.toml  build.rs
crouton-protos/proto/: catalog.proto
crouton-protos/src/: lib.rs
crouton-server/: Cargo.toml
crouton-server/src/: lib.rs  server.rs
crouton-server/src/membership/: dummy.rs  dummy_membership.rs  mod.rs  simple.rs  simple_membership.rs
crouton-tests/: Cargo.toml
crouton-tests/tests/: integration_tests.rs
crouton/src/: lib.rs
examples/crouton-client/: Cargo.toml
examples/crouton-client/src/: client.rs
proto/: crouton.proto  replica.proto
src/: client.rs  lib.rs  server.rs
tests/: integration_tests.rs
