[package]
name = "crouton-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crouton-protos = { path = "../crouton-protos" }
log = "0.4"
pretty_env_logger = "0.4"
tonic = "0.6.1"
prost = "0.9"
futures = "0.3"
futures-locks = "0.7"
tokio = { version = "1.0", features = ["macros", "process", "sync", "rt-multi-thread"] }
tokio-stream = "0.1"
crdts = "7.0"
num-bigint = "0.4.3"
num-traits = "0.2.14"
clap = "2.33.4"
serde = "1.0"
serde_json = "1.0"

[[bin]]
name = "crouton-server"
path = "src/server.rs"


