[package]
name = "crouton-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crouton = { path = "../crouton" }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.0", features = ["macros", "process", "sync", "rt-multi-thread"] }
tonic = "0.6.1"
prost = "0.9"
